Fix topic content overflow

--- a/src/containers/detail.css
+++ b/src/containers/detail.css
@@ -6,6 +6,8 @@
 }
 
 :global(.markdown-text) {
+  overflow: auto;
+
   & img {
     max-width: 100%;
   }
